// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter should render correctly when is disabled 1`] = `
Array [
  ".sharedRippleEffect-0-2-13 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14 {
  outline: none;
  position: relative;
}
.wrapper-0-2-14:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-15 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-16 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-17 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-18 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-19 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-19:focus:after {  }
  .wrapper-d0-0-2-19:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-20 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-21 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-22 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-d4-0-2-26 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d4-0-2-26:focus:after {  }
  .wrapper-d4-0-2-26:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-27 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-28 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-29 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .button-0-2-7 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-7:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-7:hover:not([disabled]) {  }
  .button-0-2-7:focus:not([disabled]) {  }
  .labelContainer-0-2-8 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-9 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-10 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-10:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-10:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-10:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d1-0-2-11 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-12 {  }
  .button-d3-0-2-23 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-23:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-23:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d3-0-2-23:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d4-0-2-24 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-25 {  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    border: 1px solid #bbbbbb;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonRight-0-2-3 {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 40px;
    cursor: default;
    height: 100%;
    outline: none;
    padding: 0;
    border-top: none;
    text-align: center;
    border-left: 1px solid #bbbbbb;
    border-right: 1px solid #bbbbbb;
    border-bottom: none;
    background-color: transparent;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }",
  <div>
    <div
      class=""
    >
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="buttonLeft-0-2-2"
        >
          <div
            class="wrapper-0-2-14 wrapper-d0-0-2-19"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d2-0-2-21"
            >
              <div
                class="ripple-0-2-15 ripple-d1-0-2-20 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d0-0-2-10"
              data-testid="onDecrement-btn"
              disabled=""
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d1-0-2-11"
              >
                <span
                  class="label-0-2-9 label-d2-0-2-12"
                >
                  -
                </span>
              </div>
            </button>
          </div>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="buttonRight-0-2-3"
        >
          <div
            class="wrapper-0-2-14 wrapper-d4-0-2-26"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d6-0-2-28"
            >
              <div
                class="ripple-0-2-15 ripple-d5-0-2-27 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d3-0-2-23"
              data-testid="onIncrement-btn"
              disabled=""
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d4-0-2-24"
              >
                <span
                  class="label-0-2-9 label-d5-0-2-25"
                >
                  +
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with default props 1`] = `
Array [
  ".sharedRippleEffect-0-2-13 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14 {
  outline: none;
  position: relative;
}
.wrapper-0-2-14:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-15 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-16 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-17 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-18 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-19 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-19:focus:after {  }
  .wrapper-d0-0-2-19:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-20 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-21 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-22 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-d4-0-2-26 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-26:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-26:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-27 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-28 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-29 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .button-0-2-7 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-7:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-7:hover:not([disabled]) {  }
  .button-0-2-7:focus:not([disabled]) {  }
  .labelContainer-0-2-8 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-9 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-10 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-10:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-10:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-10:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d1-0-2-11 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-12 {  }
  .button-d3-0-2-23 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-23:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-23:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d3-0-2-23:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d4-0-2-24 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-25 {  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    border: 1px solid #bbbbbb;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonRight-0-2-3 {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 40px;
    cursor: default;
    height: 100%;
    outline: none;
    padding: 0;
    border-top: none;
    text-align: center;
    border-left: 1px solid #bbbbbb;
    border-right: 1px solid #bbbbbb;
    border-bottom: none;
    background-color: transparent;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }",
  <div>
    <div
      class=""
    >
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="buttonLeft-0-2-2"
        >
          <div
            class="wrapper-0-2-14 wrapper-d0-0-2-19"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d2-0-2-21"
            >
              <div
                class="ripple-0-2-15 ripple-d1-0-2-20 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d0-0-2-10"
              data-testid="onDecrement-btn"
              disabled=""
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d1-0-2-11"
              >
                <span
                  class="label-0-2-9 label-d2-0-2-12"
                >
                  -
                </span>
              </div>
            </button>
          </div>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="buttonRight-0-2-3"
        >
          <div
            class="wrapper-0-2-14 wrapper-d4-0-2-26"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d6-0-2-28"
            >
              <div
                class="ripple-0-2-15 ripple-d5-0-2-27 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d3-0-2-23"
              data-testid="onIncrement-btn"
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d4-0-2-24"
              >
                <span
                  class="label-0-2-9 label-d5-0-2-25"
                >
                  +
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with label 1`] = `
Array [
  ".sharedRippleEffect-0-2-13 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14 {
  outline: none;
  position: relative;
}
.wrapper-0-2-14:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-14:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-15 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-16 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-17 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-18 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-19 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-19:focus:after {  }
  .wrapper-d0-0-2-19:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-20 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-21 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-22 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-d4-0-2-26 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-26:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-26:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-27 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-28 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-29 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .button-0-2-7 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-7:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-7:hover:not([disabled]) {  }
  .button-0-2-7:focus:not([disabled]) {  }
  .labelContainer-0-2-8 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-9 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-10 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-10:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-10:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-10:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d1-0-2-11 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-12 {  }
  .button-d3-0-2-23 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-23:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-23:hover:not([disabled]) {
    background-color: #f1f3f5;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d3-0-2-23:focus:not([disabled]) {
    background-color: #e9ecef;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .labelContainer-d4-0-2-24 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-25 {  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    border: 1px solid #bbbbbb;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonRight-0-2-3 {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 40px;
    cursor: default;
    height: 100%;
    outline: none;
    padding: 0;
    border-top: none;
    text-align: center;
    border-left: 1px solid #bbbbbb;
    border-right: 1px solid #bbbbbb;
    border-bottom: none;
    background-color: transparent;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }",
  <div>
    <div
      class=""
    >
      <label
        class="labelText-0-2-5"
      >
        label
      </label>
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="buttonLeft-0-2-2"
        >
          <div
            class="wrapper-0-2-14 wrapper-d0-0-2-19"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d2-0-2-21"
            >
              <div
                class="ripple-0-2-15 ripple-d1-0-2-20 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d0-0-2-10"
              data-testid="onDecrement-btn"
              disabled=""
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d1-0-2-11"
              >
                <span
                  class="label-0-2-9 label-d2-0-2-12"
                >
                  -
                </span>
              </div>
            </button>
          </div>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="buttonRight-0-2-3"
        >
          <div
            class="wrapper-0-2-14 wrapper-d4-0-2-26"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d6-0-2-28"
            >
              <div
                class="ripple-0-2-15 ripple-d5-0-2-27 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d3-0-2-23"
              data-testid="onIncrement-btn"
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d4-0-2-24"
              >
                <span
                  class="label-0-2-9 label-d5-0-2-25"
                >
                  +
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
